elephants appear and disappear immediately, need to fix z-index

--- a/src/css/ui-kit/_eleph-on-planets.scss
+++ b/src/css/ui-kit/_eleph-on-planets.scss
@@ -15,20 +15,20 @@
 }
 
 .pl-wrapper {
-  @apply relative flex flex-row items-center justify-center;
+  @apply relative z-10 flex flex-row items-center justify-center;
   @media screen and (max-width: 700px) {
     @apply flex-col;
   }
 }
+
 .planet {
-  position: relative;
+  @apply relative;
   @media screen and (max-width: 700px) {
     height: 33.6rem;
     width: 33.6rem;
   }
 }
 .planet-secondary-left {
-  position: relative;
   animation: rotate-secondary 6s linear infinite;
   flex-basis: 40rem;
   rotate: 300deg;
@@ -45,7 +45,6 @@
   }
 }
 .planet-secondary-right {
-  position: relative;
   animation: rotate-secondary 6s linear infinite;
   flex-basis: 40rem;
   rotate: 230deg;
@@ -81,13 +80,11 @@
 .elephant-central-img {
   position: absolute;
   left: 50%;
-  z-index: -1;
   transform: translateX(-50%) scaleX(-1) scaleY(-1);
 }
 .elephant-secondary-img {
   position: absolute;
   left: 50%;
-  z-index: -1;
   transform: translateX(-50%) scaleX(1) scaleY(-1);
 }
 
@@ -308,7 +305,6 @@
     opacity: 1;
     visibility: visible;
   }
-
   33% {
     opacity: 1;
     visibility: visible;
